--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@reduxjs/toolkit": "^2.2.5",
     "@tanstack/react-query": "^5.40.0",
     "axios": "^1.7.2",
+    "formik": "^2.4.6",
     "framer-motion": "^11.2.6",
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
